OPENNLP-1394 Reduce compiler warnings during build
- eliminates several compiler warnings by more consequent use of generic types
- reduces use of deprecated api calls to external deps
- introduces Sample interface as a marker for similar impl classes
- introduces Trainer interface as a marker for similar impl classes
- adapts previously deprecated methods in AbstractTrainer
- removes deprecated constructor 'TrainingParameters(Map<String,String> map)' in favor of 'public TrainingParameters(Map<String,Object> map)'
- removes deprecated methods in TrainingParameters